--- a/Bilibili.Manga.Model/Bilibili.Manga.Model.csproj
+++ b/Bilibili.Manga.Model/Bilibili.Manga.Model.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <Version>1.1.0</Version>
     </PropertyGroup>
     <ItemGroup>
         <None Include="..\.editorconfig" Link=".editorconfig" />
