--- a/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.desktop
+++ b/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Bilibili漫画
+Name=哔漫画
 Type=Application
 Exec=/usr/share/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia
 Icon=/usr/share/icons/icon.ico
