--- a/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.csproj
+++ b/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.1.1</Version>
+        <Version>1.1.2</Version>
         <Nullable>enable</Nullable>
         <SignAssembly>false</SignAssembly>
         <OutputType>WinExe</OutputType>
@@ -21,7 +21,6 @@
         <None Remove="Assets\icon.png" />
         <None Remove="Directory.Build.props" />
         <None Remove="Assets\Login\noavatar.png" />
-        <None Remove="runtime.osx.10.10-x64.CoreCompat.System.Drawing" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="Assets\icon.ico">
@@ -30,12 +29,12 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="0.10.12" />
-        <PackageReference Include="ZXing.Net" Version="0.16.7" />
+        <PackageReference Include="ZXing.Net" Version="0.16.8" />
         <PackageReference Include="Avalonia.Desktop" Version="0.10.12" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
         <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
         <PackageReference Include="Avalonia.Diagnostics" Version="0.10.12" />
-        <PackageReference Include="Dove.Avalonia.Controls.Extensions" Version="1.5.7" />
+        <PackageReference Include="Dove.Avalonia.Controls.Extensions" Version="1.5.8" />
         <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.10" />
         <PackageReference Include="runtime.osx.10.10-x64.CoreCompat.System.Drawing" Version="6.0.5.128" />
         <PackageReference Include="Dove.Avalonia.Controls.Extensions.ChineseInputSupoort" Version="1.1.2" />
@@ -46,7 +45,15 @@
         <ProjectReference Include="..\Bilibili.Manga.WebClient\Bilibili.Manga.WebClient.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="icon.ico" CopyToPublishDirectory="PreserveNewest">
+		<DebDependency Include="libc6" />
+		<DebDependency Include="zlib1g" />
+		<DebDependency Include="libgcc1" />
+		<DebDependency Include="libgdiplus" />
+		<DebDependency Include="libstdc++6" />
+		<DebDependency Include="libgssapi-krb5-2" />
+		<DebDependency Include="libssl1.1 libssl1.0.0" />
+		<DebDependency Include="libicu67 | libicu63 | libicu57 | libicu52" />
+		<Content Include="icon.ico" CopyToPublishDirectory="PreserveNewest">
             <LinuxPath>/usr/share/icons/icon.ico</LinuxPath>
         </Content>
         <Content Include="Bilibili.Manga.Avalonia.desktop" CopyToPublishDirectory="PreserveNewest">
