--- a/Bilibili.Manga.WebClient/Bilibili.Manga.WebClient.csproj
+++ b/Bilibili.Manga.WebClient/Bilibili.Manga.WebClient.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
+		<PackageReference Include="Downloader" Version="2.3.1" />
         <PackageReference Include="PCLCrypto" Version="2.1.40-alpha" />
     </ItemGroup>
     <ItemGroup>
