--- a/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.desktop
+++ b/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=哔漫画
+Name=Bilibili漫画
 Type=Application
-Exec=/usr/share/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia
+Exec=/usr/share/Bilibili.Manga/Bilibili.Manga
 Icon=/usr/share/icons/icon.ico
