--- a/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.csproj
+++ b/Bilibili.Manga.Avalonia/Bilibili.Manga.Avalonia.csproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Version>1.3.0</Version>
+        <Version>1.3.1</Version>
         <Platforms>AnyCPU</Platforms>
         <OutputType>WinExe</OutputType>
         <SignAssembly>false</SignAssembly>
+        <ApplicationIcon>icon.ico</ApplicationIcon>
         <TargetFramework>net6.0</TargetFramework>
         <AssemblyName>Bilibili.Manga</AssemblyName>
-        <ApplicationIcon>icon.ico</ApplicationIcon>
         <RootNamespace>Bilibili.Manga</RootNamespace>
         <PackagePrefix>$([System.Text.RegularExpressions.Regex]::Replace($(AssemblyName), "\B[A-Z]", "-$0").ToLower())</PackagePrefix>
     </PropertyGroup> 
     <ItemGroup>
-        <None Remove="Directory.Build.props" />
         <AvaloniaResource Include="Assets\**" />
+        <None Remove="Directory.Build.props" />
         <None Remove="Bilibili.Manga.desktop" />
         <None Include="..\.editorconfig" Link=".editorconfig" />
         <Content Include="Assets\icon.ico">
@@ -22,13 +22,14 @@
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="0.10.18" />
         <PackageReference Include="ZXing.Net" Version="0.16.8" />
+        <PackageReference Include="Dotnet.Bundle" Version="0.9.13" />
         <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
         <PackageReference Include="Avalonia.Diagnostics" Version="0.10.18" />
-        <PackageReference Include="Dove.Avalonia.Controls.Extensions" Version="1.8.17" />
+        <PackageReference Include="Dove.Avalonia.Controls.Extensions" Version="1.9.1" />
         <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.10" />
+        <PackageReference Include="Dove.Avalonia.Controls.Extensions.ChineseInputSupoort" Version="1.3.0" />
         <PackageReference Include="runtime.osx.10.10-x64.CoreCompat.System.Drawing" Version="6.0.5.128" />
-        <PackageReference Include="Dove.Avalonia.Controls.Extensions.ChineseInputSupoort" Version="1.2.1" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Bilibili.Manga.Model\Bilibili.Manga.Model.csproj" />
@@ -44,4 +45,18 @@
             <LinuxPath>/usr/share/applications/bilibili.manga.desktop</LinuxPath>
         </Content>
     </ItemGroup>
+	<PropertyGroup>
+		<CFBundleName>BilibiliManga</CFBundleName>
+		<CFBundleVersion>$(Version)</CFBundleVersion>
+		<CFBundleSignature>defalut</CFBundleSignature>
+		<NSPrincipalClass>NSApplication</NSPrincipalClass>
+		<CFBundlePackageType>APPL</CFBundlePackageType>
+		<CFBundleIconFile>notification_icon.ico</CFBundleIconFile>
+		<CFBundleExecutable>Bilibili.Manga</CFBundleExecutable>
+		<NSHighResolutionCapable>true</NSHighResolutionCapable>
+		<CFBundleDisplayName>哔哩哔哩漫画</CFBundleDisplayName>
+		<CFBundleShortVersionString>$(Version)</CFBundleShortVersionString>
+		<CFBundleIdentifier>com.michael.bilibili_manga_mac</CFBundleIdentifier>
+		<NSRequiresAquaSystemAppearance>true</NSRequiresAquaSystemAppearance>
+	</PropertyGroup>
 </Project>
